# broad-bros

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
neoops/: __init__.py  agent.py  logging_config.py  main.py  models.py  settings.py  tools.py
neoops/config/: loader.py
neoops/deprecations/: __init__.py  default.py  models.py
neoops/providers/: __init__.py  default.py
neoops/rules/: __init__.py  default.py  models.py
neops/: __init__.py  agent.py  cli_config.py  cli_utils.py  file_scanner.py  main.py  models.py  prompts.py  report.py  scanner.py  settings.py  tools.py
neops/config/: __init__.py  deprecations.yaml  loader.py  providers.yaml  rule_configuration.yaml  rules.yaml
neops/deprecations/: __init__.py  default.py
neops/providers/: __init__.py  default.py  models.py
neops/rules/: __init__.py  default.py  models.py
scripts/: update_anthropic_deprecations.py  update_deprecations_from_text.py  update_openai_deprecations.py
src/broad_bros/: skeleton.py
src/neops/: config.py  file_scanner.py  logging_config.py  main.py
stupid-code/: stupid-code-1.py
tests/: conftest.py  test_dummy.py
tests/bad_ai/: __init__.py  bad_ai_one.py  bad_ai_two.py
tests/good_ai/: __init__.py  good_ai_one.py
